# WaveCLVK

./: CMakeLists.txt  LICENSE  README.md  main.cpp  wave_app.hpp  wave_compute_layer.cpp  wave_compute_layer.hpp  wave_foam_compute_layer.cpp  wave_foam_compute_layer.hpp  wave_render_layer.hpp  wave_util.hpp
kernels/: advect.cl  copy.cl  copy_reduce.cl  divergence.cl  fft_kernel.cl  foam.cl  foam_cfd.cl  init_spectrum_jonswap.cl  init_spectrum_phillips.cl  inversion.cl  jacobi.cl  normals.cl  pressure.cl  reduce_foam.cl  reduce_ranges.cl  time_spectrum.cl  twiddle.cl
shaders/: ocean.frag  ocean.frag.spv  ocean.vert  ocean.vert.spv
src/: main.cpp  wave_app.cpp  wave_foam_compute_layer.cpp  wave_render_layer.cpp  wave_util.hpp
